Still width bug on iphone

--- a/amber/amber.css
+++ b/amber/amber.css
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    width: 100%;
 }
 
 .amber .info {
